<?xml version="1.0" encoding="UTF-8"?>
<!--
/*
* Copyright 2008, The Android Open Source Project
*
* Licensed under the Apache License, Version 2.0 (the "License");
* you may not use this file except in compliance with the License.
* You may obtain a copy of the License at
*
* http://www.apache.org/licenses/LICENSE-2.0
*
* Unless required by applicable law or agreed to in writing, software
* distributed under the License is distributed on an "AS IS" BASIS,
* WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
* See the License for the specific language governing permissions and
* limitations under the License.
*/
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/device_info_title">

        <PreferenceScreen android:key="battery_history_settings"
                android:title="@string/title_battery_history"
                android:summary="@string/summary_battery_history">
            <intent android:action="android.intent.action.MAIN"
                    android:targetPackage="com.android.settings"
                    android:targetClass="com.android.settings.battery_history.BatteryHistory" />
        </PreferenceScreen>
        
        <PreferenceScreen android:key="battery_information_settings"
                android:title="@string/title_battery_information"
                android:summary="@string/summary_battery_information">
            <intent android:action="android.intent.action.MAIN"
                    android:targetPackage="com.android.settings"
                    android:targetClass="com.android.settings.BatteryInfo" />
        </PreferenceScreen>
        
        <PreferenceScreen android:key="usage_statistics_settings"
                android:title="@string/title_usage_statistics"
                android:summary="@string/summary_usage_statistics">
            <intent android:action="android.intent.action.MAIN"
                    android:targetPackage="com.android.settings"
                    android:targetClass="com.android.settings.UsageStats" />
        </PreferenceScreen>
        
    </PreferenceCategory>

    <!-- power widget options -->

   <PreferenceCategory
        android:title="@string/power_widget_menu_title">

     <PreferenceScreen android:key="galaxy_s_widget"
        android:title="@string/title_galaxy_s_widget"
        android:summary="@string/summary_galaxy_s_widget">
        <intent android:action="android.intent.action.MAIN"
        android:targetPackage="com.android.spare_parts"
	android:targetClass="com.android.spare_parts.activity.GalaxySWidget" />
      </PreferenceScreen>

    </PreferenceCategory>  
          
    <!-- end power widget options -->

    <!-- lockscreen options -->
    <PreferenceCategory
        android:title="@string/lockscreen_options_title">

        <ListPreference android:key="pref_lockscreen_style"
            android:dialogTitle="@string/pref_lockscreen_style_title"
            android:title="@string/pref_lockscreen_style_title"
            android:summary="@string/pref_lockscreen_style_summary"
            android:entries="@array/pref_lockscreen_style_entries"
            android:entryValues="@array/pref_lockscreen_style_values" />

        <CheckBoxPreference android:key="pref_lockscreen_custom_app_toggle"
            android:title="@string/pref_lockscreen_custom_app_toggle_title"
            android:summary="@string/pref_lockscreen_custom_app_toggle_summary" />

        <Preference android:key="pref_lockscreen_custom_app_activity"
            android:dependency="pref_lockscreen_custom_app_toggle"
            android:title="@string/pref_lockscreen_custom_app_activity_title" />

        <CheckBoxPreference android:key="pref_lockscreen_rotary_unlock_down_toggle"
            android:title="@string/pref_lockscreen_rotary_unlock_down_title"
            android:summary="@string/pref_lockscreen_rotary_unlock_down_summary" />

        <CheckBoxPreference android:key="pref_lockscreen_rotary_hide_arrows_toggle"
            android:title="@string/pref_lockscreen_rotary_hide_arrows_title"
            android:summary="@string/pref_lockscreen_rotary_hide_arrows_summary" />

        <CheckBoxPreference
            android:key="menu_unlock_screen"
            android:title="@string/title_menu_unlock_screen"
            android:summaryOn="@string/summary_on_menu_unlock_screen"
            android:summaryOff="@string/summary_off_menu_unlock_screen" />

    </PreferenceCategory>
    <!-- end lockscreen options -->

    <!-- status bar options -->
    <PreferenceCategory
        android:title="@string/statusbar_options_title">

       <CheckBoxPreference
            android:key="display_clock"
            android:title="@string/title_display_clock"
            android:summaryOn="@string/summary_on_display_clock"
            android:summaryOff="@string/summary_off_display_clock" />

        <Preference
                android:dependency="display_clock"
                android:key="clock_color"
                android:title="@string/title_clock_color"
                android:summary="@string/summary_clock_color"
                android:defaultValue="-16777216" />

       <CheckBoxPreference
            android:key="battery_percentage"
            android:title="@string/title_battery_percentage"
            android:summaryOn="@string/summary_on_battery_percentage"
            android:summaryOff="@string/summary_off_battery_percentage" />

        <Preference
                android:dependency="battery_percentage"
                android:key="battery_color"
                android:title="@string/title_battery_color"
                android:summary="@string/summary_battery_color"
                android:defaultValue="-1" />

    </PreferenceCategory>
    <!-- end status bar options -->

    <!-- launcher options -->
    <PreferenceCategory
        android:title="@string/launcher_options_title">

       <CheckBoxPreference
            android:key="launcher_orientation"
            android:title="@string/title_launcher_orientation"
            android:summaryOn="@string/summary_on_launcher_orientation"
            android:summaryOff="@string/summary_off_launcher_orientation" />
        
        <ListPreference
                android:key="window_animations"
                android:title="@string/title_window_animations"
                android:summary="@string/summary_window_animations"
                android:entries="@array/entries_animations"
                android:entryValues="@array/entryvalues_animations"
                android:dialogTitle="@string/dialog_title_window_animations" />
                
        <ListPreference
                android:key="transition_animations"
                android:title="@string/title_transition_animations"
                android:summary="@string/summary_transition_animations"
                android:entries="@array/entries_animations"
                android:entryValues="@array/entryvalues_animations"
                android:dialogTitle="@string/dialog_title_transition_animations" />
        
        <CheckBoxPreference
            android:key="fancy_ime_animations"
            android:title="@string/title_fancy_ime_animations"
            android:summaryOn="@string/summary_on_fancy_ime_animations"
            android:summaryOff="@string/summary_off_fancy_ime_animations"/>

    </PreferenceCategory>
    <!-- end animation options -->

    <PreferenceCategory
        android:title="@string/extras_title">

        <CheckBoxPreference
                android:key="compatibility_mode"
                android:title="@string/compatibility_mode_title"
                android:summaryOn="@string/compatibility_mode_summary_on"
                android:summaryOff="@string/compatibility_mode_summary_off" />

    </PreferenceCategory>
</PreferenceScreen>

